--- a/simple-blog-page-master/index.html
+++ b/simple-blog-page-master/index.html
@@ -12,7 +12,7 @@
       integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/styles/style.css" />
   </head>
   <body>
     <!-- header -->
@@ -22,8 +22,9 @@
           <a href="index.html" class="navbar-brand">Not-So-Secret</a>
           <div class="navbar-nav">
             <a href="">home</a>
-            <a href="">blog</a>
-            <a href="">about</a>
+            <a href="#design">trending</a>
+            <a href="#blog">blog</a>
+            <a href="#about">about</a>
           </div>
         </div>
       </nav>
@@ -42,16 +43,16 @@
     <section class="design" id="design">
       <div class="container">
         <div class="title">
-          <h2>TRENDING</h2>
-          <p>??? to be filled ???</p>
+          <h2 style="color: black">TRENDING</h2>
+          <p style="color: black">Freshest On The Scene</p>
         </div>
 
         <div class="design-content">
           <!-- item -->
           <div class="design-item">
             <div class="design-img">
-              <img src="images/pradabag.jpg" alt="" />
-              <span><i class="far fa-heart"></i> 22</span>
+              <img src="/assets/images/pradabag.jpg" alt="" />
+
               <span>Prada</span>
             </div>
             <div class="design-title">
@@ -66,8 +67,8 @@
           <!-- item -->
           <div class="design-item">
             <div class="design-img">
-              <img src="images/guccibelt.jpeg" alt="" />
-              <span><i class="far fa-heart"></i> 22</span>
+              <img src="/assets/images/guccibelt.jpeg" alt="" />
+
               <span>Gucci</span>
             </div>
             <div class="design-title">
@@ -82,8 +83,8 @@
           <!-- item -->
           <div class="design-item">
             <div class="design-img">
-              <img src="images/Dior.jpg" alt="" />
-              <span><i class="far fa-heart"></i> 22</span>
+              <img src="/assets/images/Dior.jpg" alt="" />
+
               <span>Dior</span>
             </div>
             <div class="design-title">
@@ -103,110 +104,11 @@
       <div class="container">
         <div class="title">
           <h2>STREETWEAR ESSENTIALS</h2>
-          <p>vital outfit pieces</p>
+          <p style="color: whitesmoke">vital outfit pieces</p>
         </div>
-        <div class="blog-content">
+        <div class="blog-content" id="blog-content">
           <!-- item -->
-          <div class="blog-item">
-            <div class="blog-img">
-              <img src="images/pexels-edu-carvalho-1995950.jpg" alt="" />
-              <span><i class="far fa-heart"></i></span>
-            </div>
-            <div class="blog-text">
-              <span>20 January, 2020</span>
-              <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis
-                libero quas ipsum laudantium nihil! Quaerat.
-              </p>
-              <a href="#">Read More</a>
-            </div>
-          </div>
-          <!-- end of item -->
-          <!-- item -->
-          <div class="blog-item">
-            <div class="blog-img">
-              <img src="images/pexels-erik-mclean-4085431.jpg" alt="" />
-              <span><i class="far fa-heart"></i></span>
-            </div>
-            <div class="blog-text">
-              <span>20 January, 2020</span>
-              <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis
-                libero quas ipsum laudantium nihil! Quaerat.
-              </p>
-              <a href="#">Read More</a>
-            </div>
-          </div>
-          <!-- end of item -->
-          <!-- item -->
-          <div class="blog-item">
-            <div class="blog-img">
-              <img src="images/pexels-k-makhasette-3806064.jpg" alt="" />
-              <span><i class="far fa-heart"></i></span>
-            </div>
-            <div class="blog-text">
-              <span>20 January, 2020</span>
-              <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis
-                libero quas ipsum laudantium nihil! Quaerat.
-              </p>
-              <a href="#">Read More</a>
-            </div>
-          </div>
-          <!-- end of item -->
-          <!-- item -->
-          <div class="blog-item">
-            <div class="blog-img">
-              <img src="images/pexels-kaique-rocha-561656.jpg" alt="" />
-              <span><i class="far fa-heart"></i></span>
-            </div>
-            <div class="blog-text">
-              <span>20 January, 2020</span>
-              <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis
-                libero quas ipsum laudantium nihil! Quaerat.
-              </p>
-              <a href="#">Read More</a>
-            </div>
-          </div>
-          <!-- end of item -->
-          <!-- item -->
-          <div class="blog-item">
-            <div class="blog-img">
-              <img src="images/pexels-lucas-monteiro-1868471.jpg" alt="" />
-              <span><i class="far fa-heart"></i></span>
-            </div>
-            <div class="blog-text">
-              <span>20 January, 2020</span>
-              <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis
-                libero quas ipsum laudantium nihil! Quaerat.
-              </p>
-              <a href="#">Read More</a>
-            </div>
-          </div>
-          <!-- end of item -->
-          <!-- item -->
-          <div class="blog-item">
-            <div class="blog-img">
-              <img src="images/essent1.jpg" alt="" />
-              <span><i class="far fa-heart"></i></span>
-            </div>
-            <div class="blog-text">
-              <span>20 January, 2020</span>
-              <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis
-                libero quas ipsum laudantium nihil! Quaerat.
-              </p>
-              <a href="#">Read More</a>
-            </div>
-          </div>
+
           <!-- end of item -->
         </div>
       </div>
@@ -218,33 +120,61 @@
       <div class="container">
         <div class="about-content">
           <div>
-            <img src="images/me.jpg" alt="" />
+            <img src="/assets/images/me.jpg" alt="" />
           </div>
           <div class="about-text">
             <div class="title">
-              <h2>Kalem Salie</h2>
-              <p>art & design is my passion</p>
+              <h2 style="color: black">ABOUT</h2>
+              <p>Kalem Salie<br />Founder of Not-So-Secret</p>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id totam
-              voluptatem saepe eius ipsum nam provident sapiente, natus et vel
-              eligendi laboriosam odit eos temporibus impedit veritatis ut, illo
-              deserunt illum voluptate quis beatae quod. Necessitatibus
-              provident dicta consectetur labore!
+              I’ve never really felt like I “fit in” anywhere, and for a long
+              time, I tried to use clothes as a way to “fix” that. The
+              confidence boost you gain from wearing a new outfit is like no
+              other. I used to beg my parents to buy me certain clothes and I
+              would plan what I would be wearing for the day. This obsession
+              with clothes grew stronger over the years and I slowly turned
+              myself into some kind of fashion freak.
             </p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-              corrupti natus, eos quia recusandae voluptatem veniam modi
-              officiis minima provident rem sint porro fuga quos tempora ea
-              suscipit vero velit sed laudantium eaque necessitatibus maxime!
+              I started to keep up to date on new releases and collections. I
+              would plan what I want to get next when I had some money to spend.
+              This blog that I have created is to help others like myself, the
+              fashion lovers, to keep up to date with the new trends and latest
+              events in the beautiful world of fashion.
             </p>
           </div>
         </div>
       </div>
     </section>
-    <!-- end of about -->
 
-    <!-- footer -->
+    <form
+      id="subscribeForm"
+      onsubmit="event.preventDefault();  subscribeUser();"
+    >
+      <div class="newsletter">
+        <h2>Subscribe to our Newsletter</h2>
+        <p>
+          Lorem ipsum text about why you should subscribe to our newsletter
+          blabla. Lorem ipsum text about why you should subscribe to our
+          newsletter blabla.
+        </p>
+      </div>
+
+      <div class="container" style="background-color: white">
+        <input type="text" placeholder="Name" name="name" required />
+        <input type="text" placeholder="Email address" name="mail" required />
+        <label>
+          <input type="checkbox" checked="checked" name="subscribe" /> Daily
+          Newsletter
+        </label>
+      </div>
+
+      <div class="container">
+        <button type="submit">submit</button>
+      </div>
+    </form>
+
     <footer>
       <div class="social-links">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -254,5 +184,8 @@
       </div>
     </footer>
     <!-- end of footer -->
+    <!-- SCRIPT imports -->
+    <script src="assets/scripts/subscribe.js"></script>
+    <script src="./assets/scripts/blogs.js"></script>
   </body>
 </html>
